--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@drawable/logosq"
         android:label="@string/app_name"
@@ -55,7 +56,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
         </provider>
-
         <activity
             android:name=".AssessmentsActivity"
             android:label="Assessments"
@@ -79,6 +79,7 @@
             android:name=".WifiStatus"
             android:label="Campus Wifi Status"
             android:parentActivityName=".LaunchingActivity" />
+
     </application>
 
 </manifest>
