--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
     implementation 'com.google.android.gms:play-services-ads:17.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
 }
 
