--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:17.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.github.ivbaranov:materiallettericon:0.2.3'
+
 
 }
 
