--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,6 +122,7 @@
         <activity
             android:name=".aums.HomeActivity"
             android:label="AUMS Home"
+            android:launchMode="singleTop"
             android:parentActivityName=".LaunchingActivity"
             android:screenOrientation="portrait" />
         <activity
