--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
     implementation 'com.google.android.gms:play-services-ads:17.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
 
     implementation 'com.github.ivbaranov:materiallettericon:0.2.3'
 
