--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 27
-        versionName "2.7.1"
+        versionName "2.7.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -37,12 +37,14 @@ dependencies {
     })
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.google.firebase:firebase-messaging:17.4.0'
-    implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
     implementation 'com.github.ivbaranov:materiallettericon:0.2.3'
     implementation 'com.google.android.gms:play-services-oss-licenses:16.0.2'
-
+    implementation 'com.android.support:recyclerview-v7:28.0.0' // Required Dependency by Audience Network SDK
+    implementation 'com.facebook.android:audience-network-sdk:5.2.1'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
 
 }
