--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,8 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
     implementation 'com.github.ivbaranov:materiallettericon:0.2.3'
     implementation 'com.google.android.gms:play-services-oss-licenses:16.0.2'
-    implementation 'com.android.support:recyclerview-v7:28.0.0' // Required Dependency by Audience Network SDK
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    // Required Dependency by Audience Network SDK
     implementation 'com.facebook.android:audience-network-sdk:5.2.1'
     implementation 'com.google.firebase:firebase-database:16.1.0'
 
