--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,18 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
-        <activity android:name=".news.NewsActivity"
+        <activity android:name=".activities.SplashActivity"
+            android:theme="@style/AppThemeDup">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".news.NewsActivity"
             android:label="Latest News"
-            android:parentActivityName=".activities.LaunchingActivity"/>
+            android:parentActivityName=".activities.LaunchingActivity" />
         <activity
             android:name=".aumsV2.activities.AttendanceActivity"
             android:label="AUMS - Attendance"
@@ -78,11 +87,7 @@
             android:name=".activities.LaunchingActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".downloads.DownloadsActivity"
