--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,7 @@ dependencies {
     implementation 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
     implementation 'com.github.siyamed:android-shape-imageview:0.9.3'
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
+    implementation 'nl.dionsegijn:konfetti:1.1.2'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.21'
 
 }
