--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,17 @@ apply plugin: 'io.fabric'
 apply plugin: 'com.google.gms.oss.licenses.plugin'
 apply plugin: 'com.google.gms.google-services'
 
+def props = new Properties()
+try {
+    props.load(new FileInputStream("app/keys.properties"))
+} catch (e) {
+    props.load(new FileInputStream("app/keys.properties.example"))
+    println("===========")
+    println(e.message)
+    println("Loaded app/keys.properties.example instead.")
+    println("===========")
+    println()
+}
 
 android {
     compileSdkVersion 28
@@ -10,10 +21,12 @@ android {
         applicationId "in.co.rajkumaar.amritarepo"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 34
-        versionName "3.0"
+        versionCode 36
+        versionName "3.0.2"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "PLAY_LICENSE_KEY", "\"${props.getProperty("googlePlayLicenseKey")}\""
     }
     buildTypes {
         release {
@@ -38,7 +51,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    implementation 'com.google.firebase:firebase-messaging:17.5.0'
+    implementation 'com.google.firebase:firebase-messaging:17.6.0'
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -53,5 +66,8 @@ dependencies {
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
     implementation 'nl.dionsegijn:konfetti:1.1.2'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.21'
+    implementation("org.solovyev.android:checkout:1.2.1", {
+        exclude group: "com.google.code.findbugs", module: "jsr305"
+    })
 
 }
