--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,25 +8,21 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="com.android.vending.BILLING"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/logosq"
         android:label="@string/app_name"
+        android:name=".helpers.BillingItem"
         android:roundIcon="@drawable/logosq"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
-        <activity
-            android:name=".activities.SplashActivity"
-            android:theme="@style/AppThemeDup">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".activities.SupportActivity"
+            android:label="Support"
+            android:parentActivityName=".activities.LaunchingActivity"/>
         <activity
             android:name=".news.NewsActivity"
             android:label="Latest News"
@@ -45,8 +41,7 @@
             android:parentActivityName=".aumsV2.activities.HomeActivity" />
         <activity
             android:name=".aumsV2.activities.HomeActivity"
-            android:label="AUMS - Home"
-            android:parentActivityName=".activities.LaunchingActivity" />
+            android:label="AUMS - Home" />
         <activity
             android:name=".aumsV2.activities.LoginActivity"
             android:label="AUMS - Login"
@@ -88,7 +83,13 @@
             android:name=".activities.LaunchingActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name=".downloads.DownloadsActivity"
             android:label="Downloads"
