--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,9 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2')
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
     implementation 'com.google.firebase:firebase-core:16.0.9'
@@ -79,7 +79,7 @@ dependencies {
     implementation 'com.github.siyamed:android-shape-imageview:0.9.3'
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
     implementation 'nl.dionsegijn:konfetti:1.1.2'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.21'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.31'
     implementation("org.solovyev.android:checkout:1.2.1", {
         exclude group: "com.google.code.findbugs", module: "jsr305"
     })
