--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,12 +21,15 @@ try {
 
 android {
     compileSdkVersion 28
+    lintOptions {
+        checkReleaseBuilds false
+    }
     defaultConfig {
         applicationId "in.co.rajkumaar.amritarepo"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 47
-        versionName "3.1.10"
+        versionCode 48
+        versionName "3.2.0"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -90,5 +93,9 @@ dependencies {
     implementation 'org.apache.ftpserver:ftpserver-core:1.1.1'
     implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
     implementation 'com.rilixtech:materialfancybuttons:1.8.7'
+
+    //Google Ads
+    implementation 'com.google.android.gms:play-services-ads:17.0.0'
+
 
 }
