--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,7 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-$ANDROID_API_LEVEL
+before_script:
+    - cp ./app/mock-google-services.json "$ANDROID_HOME/app/google-services.json"
 script:
     - ./gradlew build check
