--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ android:
     - extra-android-m2repository
     - addon-google_apis-google-$ANDROID_API_LEVEL
 before_script:
-    - sudo cp ./app/mock-google-services.json "$ANDROID_HOME/app/google-services.json"
+    - cp app/mock-google-services.json app/google-services.json
 script:
     - ./gradlew build check
