--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
         versionCode 54
         versionName "3.2.6"
         multiDexEnabled true
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "PLAY_LICENSE_KEY", "\"${props.getProperty("googlePlayLicenseKey")}\""
         buildConfigField "String", "SECRET_HASH", "\"${props.getProperty("secretHash")}\""
@@ -54,31 +54,30 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2')
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0')
+    androidTestImplementation 'androidx.test:rules:1.2.0'
 
     implementation 'com.loopj.android:android-async-http:1.4.9'
-    implementation "com.google.firebase:firebase-iid:18.0.0"
-    implementation 'com.google.firebase:firebase-messaging:18.0.0'
-    implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation "com.google.firebase:firebase-iid:20.0.1"
+    implementation 'com.google.firebase:firebase-messaging:20.0.1'
+    implementation 'com.google.firebase:firebase-core:17.2.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.ivbaranov:materiallettericon:0.2.3'
-    implementation 'com.google.android.gms:play-services-oss-licenses:16.0.2'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.google.firebase:firebase-database:17.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
     implementation 'com.github.siyamed:android-shape-imageview:0.9.3'
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
     implementation 'nl.dionsegijn:konfetti:1.1.2'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.31'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50'
     implementation("org.solovyev.android:checkout:1.2.1", {
         exclude group: "com.google.code.findbugs", module: "jsr305"
     })
@@ -89,5 +88,6 @@ dependencies {
     implementation 'com.rilixtech:materialfancybuttons:1.8.7'
     implementation 'com.github.ivbaranov:materiallettericon:0.2.3'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.github.jrvansuita:MaterialAbout:0.2.3'
 
 }
